<resources>
    <string name="app_name">FashionApplication</string>
    <string name="action_settings">Settings</string>
    <string name="tops">Tops</string>
    <string name="bottoms">Bottoms</string>
    <string name="pants">pants</string>
    <string name="accessories">Accessories</string>
    <string name="shoes">shoes</string>
    <string name="sortbutton">Sort</string>
    <string name="loveitbutton">LOVE IT!</string>
<<<<<<< HEAD
    <string name="finaloutfit">Share Outfit</string>
    <string name="leftNav">leftNav</string>
<<<<<<< HEAD
    <string name="title_activity_test_nav">TestNav</string>
    <string name="title_activity_test_navv">TestNavv</string>
=======
>>>>>>> b7b2ca1c98b751f2f038c87cafc3541aa0db480a
>>>>>>> da08b982aaff9af93157329fabdb61cabc9184fd
=======
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="restaurant">restaurant</string>
    >>>>>>> bbc332cb930dbd7ab08e87b65b5376b6c86c0931
</resources>
