<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/Tops"
        android:contentDescription="@string/tops"
        android:clickable="true"
        android:layout_marginLeft="20dp"
        android:layout_gravity="left|top"
        android:layout_marginTop="20dp" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/Bottoms"
        android:contentDescription="@string/bottoms"
        android:clickable="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="140dp"
        android:layout_gravity="left|top" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/Shoes"
        android:contextClickable="true"
        android:contentDescription="@string/shoes"
        android:clickable="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="left|center_vertical" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/Accessories"
        android:contentDescription="@string/accessories"
        android:clickable="true"
        android:layout_marginLeft="20dp"
        android:layout_gravity="left|center_vertical"
        android:layout_marginTop="170dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Ask Cortana"
        android:id="@+id/cortana"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginLeft="60dp"
        android:textSize="20sp"
        android:clickable="true"
        android:layout_marginBottom="5dp" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton2"
        android:layout_gravity="left|top"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:clickable="true"
        android:contentDescription="@string/leftNav" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton3"
        android:layout_gravity="left|top"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="115dp"
        android:clickable="true" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton4"
        android:layout_gravity="left|center_vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="115dp"
        android:clickable="true" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton5"
        android:layout_gravity="left|center_vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="5dp"
        android:clickable="true" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton6"
        android:layout_gravity="left|top"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="5dp"
        android:clickable="true" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton7"
        android:layout_gravity="left|top"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="115dp"
        android:clickable="true" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton8"
        android:layout_gravity="left|center_vertical"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="115dp"
        android:clickable="true" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton9"
        android:layout_gravity="left|center_vertical"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="5dp"
        android:clickable="true" />

</FrameLayout>